--- a/back/package.json
+++ b/back/package.json
@@ -8,5 +8,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "apollo-server": "^3.13.0",
+    "dotenv": "^17.2.2",
+    "graphql": "^16.11.0",
+    "nodemon": "^3.1.10",
+    "uuid": "^13.0.0"
   }
 }
