--- a/back/package.json
+++ b/back/package.json
@@ -20,12 +20,20 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/apollo": "^13.1.0",
+    "@apollo/server": "^4",
+    "@nestjs-query/query-graphql": "^0.30.0",
+    "@nestjs-query/query-typeorm": "^0.30.0",
+    "@nestjs/apollo": "^12",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/graphql": "^13.1.0",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
+    "@typegoose/typegoose": "^12.19.0",
+    "graphql": "^16.11.0",
+    "graphql-compose": "^9.1.0",
+    "graphql-compose-mongoose": "^10.0.0",
     "mongoose": "^8.18.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
