--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -2,17 +2,14 @@ FROM node:18-alpine
 
 WORKDIR /app
 
-# Копируем package.json
+RUN npm install -g pnpm
+
 COPY package*.json ./
 
-# Устанавливаем зависимости
-RUN npm install
+RUN pnpm install
 
-# Копируем исходный код
 COPY . .
 
-# Открываем порт фронтенда
 EXPOSE 3000
 
-# Запускаем фронтенд в режиме разработки
-CMD ["npm", "run", "dev"]
+CMD ["pnpm", "run", "dev"]
