--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.2",
     "@ant-design/nextjs-registry": "^1.1.0",
     "antd": "^5.27.4",
     "graphql": "^16.11.0",
