--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -2,14 +2,13 @@ FROM node:18-alpine
 
 WORKDIR /app
 
-RUN npm install -g pnpm
 
 COPY package*.json ./
 
-RUN pnpm install
+RUN npm install
 
 COPY . .
 
 EXPOSE 3000
 
-CMD ["pnpm", "run", "dev"]
+CMD ["npm", "run", "dev"]
