--- a/front/package.json
+++ b/front/package.json
@@ -16,7 +16,8 @@
     "graphql-request": "^7.2.0",
     "next": "15.5.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "styled-jsx": "^5.1.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
