--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start:back": "cd back && pnpm install && pnpm run build && pnpm run start",
-    "start:front": "cd front && pnpm install && pnpm run dev",
+    "start:front": "cd front && npm install && npm run build && npm run start",
     "start": "concurrently \"pnpm run start:back\" \"pnpm run start:front\""
   },
   "keywords": [],
