--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,22 @@
-version: "3.8"
-
+version: "3.9"
 services:
-  # MongoDB сервис
-  mongodb:
-    image: mongo:7.0
-    container_name: mongo_db
-    ports:
-      - "27017:27017"
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME=admin
-      - MONGO_INITDB_ROOT_PASSWORD=password123
-      - MONGO_INITDB_DATABASE=myapp
-    volumes:
-      - mongodb_data:/data/db
-      - ./mongo-init:/docker-entrypoint-initdb.d
-    restart: unless-stopped
-    networks:
-      - app-network
-
-  # Бэкенд сервис
-  back:
+  app:
     build:
-      context: ./back
+      context: .
       dockerfile: Dockerfile
     ports:
-      - "3001:3001"
+      - "3000:3000" # фронт
+      - "3001:3001" # бэк
     environment:
-      - GRAPHQL_PATH=graphql
-      - PORT=3001
-      - MONGODB_URI=mongodb://admin:password123@mongodb:27017/myapp?authSource=admin
-      - CORS_ORIGIN=*
-      - CORS_CREDENTIALS=true
+      GRAPHQL_PATH: graphql
+      PORT: 3001
+      MONGODB_URI: mongodb://admin:password123@mongodb:27017/myapp?authSource=admin
+      CORS_ORIGIN: "*"
+      CORS_CREDENTIALS: "true"
+      NODE_ENV: development
+      NEXT_PUBLIC_GRAPHQL_URL: http://localhost:3001/graphql
     volumes:
-      - ./back:/app
+      - .:/app
       - /app/node_modules
     depends_on:
       - mongodb
@@ -40,28 +24,20 @@ services:
     networks:
       - app-network
 
-  # Фронтенд сервис
-  front:
-    build:
-      context: ./front
-      dockerfile: Dockerfile
-    ports:
-      - "3000:3000"
+  mongodb:
+    image: mongo:6.0
     environment:
-      - NODE_ENV=development
-      - NEXT_PUBLIC_GRAPHQL_URL=http://localhost:3001/graphql
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: password123
+    ports:
+      - "27017:27017"
     volumes:
-      - ./front:/app
-      - /app/node_modules
-    depends_on:
-      - back
-    restart: unless-stopped
+      - mongo_data:/data/db
     networks:
       - app-network
 
 volumes:
-  mongodb_data:
+  mongo_data:
 
 networks:
   app-network:
-    driver: bridge
