--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start:back": "cd back && pnpm install && pnpm run build && pnpm run start",
-    "start:front": "cd front && npm install && npm run build && npm run start",
+    "start:front": "cd front && npm install && npm run dev",
     "start": "concurrently \"pnpm run start:back\" \"npm run start:front\""
   },
   "devDependencies": {
