--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start:back": "cd back && pnpm install && pnpm run build && pnpm run start",
+    "start:back": "cd back && npm install && npm run build && npm run start",
     "start:front": "cd front && npm install && npm run dev",
-    "start": "concurrently \"pnpm run start:back\" \"npm run start:front\""
+    "start": "concurrently \"npm run start:back\" \"npm run start:front\""
   },
   "devDependencies": {
     "concurrently": "^9.2.1"
