--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -2,14 +2,16 @@ FROM node:24-alpine
 
 WORKDIR /usr/src/app
 
+RUN npm install -g pnpm
+
 COPY package*.json ./
 
-RUN npm install
+RUN pnpm install
 
 COPY . .
 
-RUN npm run build
+RUN pnpm run build
 
 EXPOSE 3001
 
-CMD ["npm", "run", "start:prod"]
+CMD ["pnpm", "run", "start:prod"]
