--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -2,12 +2,14 @@ FROM node:18-alpine
 
 WORKDIR /app
 
+RUN npm install -g pnpm
+
 COPY package*.json ./
 
-RUN npm install
+RUN pnpm install
 
 COPY . .
 
 EXPOSE 3000
 
-CMD ["npm", "run", "dev"]
+CMD ["pnpm", "run", "dev"]
