--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,38 @@
-version: "3.9"
+version: "3.8"
+
 services:
-  app:
+  # MongoDB сервис
+  mongodb:
+    image: mongo:7.0
+    container_name: mongo_db
+    ports:
+      - "27017:27017"
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=admin
+      - MONGO_INITDB_ROOT_PASSWORD=password123
+      - MONGO_INITDB_DATABASE=myapp
+    volumes:
+      - mongodb_data:/data/db
+      - ./mongo-init:/docker-entrypoint-initdb.d
+    restart: unless-stopped
+    networks:
+      - app-network
+
+  # Бэкенд сервис
+  back:
     build:
-      context: .
+      context: ./back
       dockerfile: Dockerfile
     ports:
-      - "3000:3000" # фронт
-      - "3001:3001" # бэк
+      - "3001:3001"
     environment:
-      GRAPHQL_PATH: graphql
-      PORT: 3001
-      MONGODB_URI: mongodb://admin:password123@mongodb:27017/myapp?authSource=admin
-      CORS_ORIGIN: "*"
-      CORS_CREDENTIALS: "true"
-      NODE_ENV: development
-      NEXT_PUBLIC_GRAPHQL_URL: http://localhost:3001/graphql
+      - GRAPHQL_PATH=graphql
+      - PORT=3001
+      - MONGODB_URI=mongodb://admin:password123@mongodb:27017/myapp?authSource=admin
+      - CORS_ORIGIN=*
+      - CORS_CREDENTIALS=true
     volumes:
-      - .:/app
+      - ./back:/app
       - /app/node_modules
     depends_on:
       - mongodb
@@ -24,20 +40,28 @@ services:
     networks:
       - app-network
 
-  mongodb:
-    image: mongo:6.0
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: password123
+  # Фронтенд сервис
+  front:
+    build:
+      context: ./front
+      dockerfile: Dockerfile
     ports:
-      - "27017:27017"
+      - "3000:3000"
+    environment:
+      - NODE_ENV=development
+      - NEXT_PUBLIC_GRAPHQL_URL=http://localhost:3001/graphql
     volumes:
-      - mongo_data:/data/db
+      - ./front:/app
+      - /app/node_modules
+    depends_on:
+      - back
+    restart: unless-stopped
     networks:
       - app-network
 
 volumes:
-  mongo_data:
+  mongodb_data:
 
 networks:
   app-network:
+    driver: bridge
