--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,21 +2,21 @@ version: "3.8"
 
 services:
   # MongoDB сервис
-  mongodb:
-    image: mongo:7.0
-    container_name: mongo_db
-    ports:
-      - "27017:27017"
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME=admin
-      - MONGO_INITDB_ROOT_PASSWORD=password123
-      - MONGO_INITDB_DATABASE=myapp
-    volumes:
-      - mongodb_data:/data/db
-      - ./mongo-init:/docker-entrypoint-initdb.d
-    restart: unless-stopped
-    networks:
-      - app-network
+  # mongodb:
+  #   image: mongo:7.0
+  #   container_name: mongo_db
+  #   ports:
+  #     - "27017:27017"
+  #   environment:
+  #     - MONGO_INITDB_ROOT_USERNAME=admin
+  #     - MONGO_INITDB_ROOT_PASSWORD=password123
+  #     - MONGO_INITDB_DATABASE=myapp
+  #   volumes:
+  #     - mongodb_data:/data/db
+  #     - ./mongo-init:/docker-entrypoint-initdb.d
+  #   restart: unless-stopped
+  #   networks:
+  #     - app-network
 
   # Бэкенд сервис
   back:
@@ -28,7 +28,7 @@ services:
     environment:
       - GRAPHQL_PATH=graphql
       - PORT=3001
-      - MONGODB_URI=mongodb://admin:password123@mongodb:27017/myapp?authSource=admin
+      - MONGODB_URI=mongodb://admin:root@localhost:27017/taskmanager?authSource=admin
       - CORS_ORIGIN=*
       - CORS_CREDENTIALS=true
     volumes:
