--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,8 +34,6 @@ services:
     volumes:
       - ./back:/app
       - /app/node_modules
-    depends_on:
-      - mongodb
     restart: unless-stopped
     networks:
       - app-network
@@ -59,8 +57,8 @@ services:
     networks:
       - app-network
 
-volumes:
-  mongodb_data:
+# volumes:
+#   mongodb_data:
 
 networks:
   app-network:
