--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,6 @@ services:
   #   networks:
   #     - app-network
 
-  # Бэкенд сервис
   back:
     build:
       context: ./back
@@ -37,8 +36,8 @@ services:
     restart: unless-stopped
     networks:
       - app-network
+    network_mode: "host"
 
-  # Фронтенд сервис
   front:
     build:
       context: ./front
@@ -56,6 +55,7 @@ services:
     restart: unless-stopped
     networks:
       - app-network
+    network_mode: "host"
 
 # volumes:
 #   mongodb_data:
