--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,8 @@ services:
       - ./back:/app
       - /app/node_modules
     restart: unless-stopped
+    networks:
+      - app-network
     network_mode: "host"
 
   front:
@@ -51,6 +53,13 @@ services:
     depends_on:
       - back
     restart: unless-stopped
+    networks:
+      - app-network
     network_mode: "host"
+
 # volumes:
 #   mongodb_data:
+
+networks:
+  app-network:
+    driver: bridge
