--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,32 +2,32 @@ version: "3.8"
 
 services:
   # MongoDB сервис
-  # mongodb:
-  #   image: mongo:7.0
-  #   container_name: mongo_db
-  #   ports:
-  #     - "27017:27017"
-  #   environment:
-  #     - MONGO_INITDB_ROOT_USERNAME=admin
-  #     - MONGO_INITDB_ROOT_PASSWORD=password123
-  #     - MONGO_INITDB_DATABASE=myapp
-  #   volumes:
-  #     - mongodb_data:/data/db
-  #     - ./mongo-init:/docker-entrypoint-initdb.d
-  #   restart: unless-stopped
-  #   networks:
-  #     - app-network
+  mongodb:
+    image: mongo:7.0
+    container_name: mongo_db
+    ports:
+      - "27017:27017"
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=admin
+      - MONGO_INITDB_ROOT_PASSWORD=password123
+      - MONGO_INITDB_DATABASE=myapp
+    volumes:
+      - mongodb_data:/data/db
+      - ./mongo-init:/docker-entrypoint-initdb.d
+    restart: unless-stopped
+    networks:
+      - app-network
 
   back:
     build:
       context: ./back
       dockerfile: Dockerfile
     ports:
-      - "3001:3001"
+      - "${BACK_PORT}:${BACK_PORT}"
     environment:
-      - GRAPHQL_PATH=graphql
-      - PORT=3001
-      - MONGODB_URI=mongodb://admin:root@host.docker.internal:27017/taskmanager?authSource=admin
+      - GRAPHQL_PATH=#{GRAPHQL_PATH}
+      - PORT=${BACK_PORT}
+      - MONGODB_URI=${MONGODB_URI}
       - CORS_ORIGIN=*
       - CORS_CREDENTIALS=true
     extra_hosts:
@@ -44,10 +44,10 @@ services:
       context: ./front
       dockerfile: Dockerfile
     ports:
-      - "3000:3000"
+      - "${FRONT_PORT}:${FRONT_PORT}"
     environment:
       - NODE_ENV=development
-      - NEXT_PUBLIC_GRAPHQL_URL=http://91.147.93.223//graphql
+      - NEXT_PUBLIC_GRAPHQL_URL=${NEXT_PUBLIC_GRAPHQL_URL}
     volumes:
       - ./front:/app
       - /app/node_modules
@@ -57,8 +57,8 @@ services:
     networks:
       - app-network
 
-# volumes:
-#   mongodb_data:
+volumes:
+  mongodb_data:
 
 networks:
   app-network:
