--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,9 @@ NEXT_PUBLIC_GRAPHQL_URL=http://91.147.93.223//graphql
 
 #Mongo
 MONGODB_URI=mongodb://admin:root@host.docker.internal:27017/taskmanager?authSource=admin
+MONGO_DB_USERNAME=user
+MONGO_DB_PASS=pass
+MONGO_INITDB_DATABASE=database
 
 # GraphQL
 GRAPHQL_PATH=graphql
