some mongo fixes

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ MONGODB_URI=mongodb://admin:root@host.docker.internal:27017/taskmanager?authSour
 MONGO_DB_USERNAME=user
 MONGO_DB_PASS=pass
 MONGO_INITDB_DATABASE=database
+MONGO_PORT=27017
 
 # GraphQL
 GRAPHQL_PATH=graphql
