--- a/.env.example
+++ b/.env.example
@@ -3,10 +3,10 @@ BACK_PORT=3001
 FRONT_PORT=3000
 
 # URLs
-NEXT_PUBLIC_GRAPHQL_URL=http://91.147.93.223//graphql
+NEXT_PUBLIC_GRAPHQL_URL=http://91.147.93.223/graphql
 
 #Mongo
-MONGODB_URI=mongodb://admin:root@host.docker.internal:27017/taskmanager?authSource=admin
+MONGODB_URI=mongodb://user:pass@host:27017/database?authSource=database
 MONGO_DB_USERNAME=user
 MONGO_DB_PASS=pass
 MONGO_INITDB_DATABASE=database
