--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     ports:
       - "${BACK_PORT}:${BACK_PORT}"
     environment:
-      - GRAPHQL_PATH=#{GRAPHQL_PATH}
+      - GRAPHQL_PATH=${GRAPHQL_PATH}
       - PORT=${BACK_PORT}
       - MONGODB_URI=${MONGODB_URI}
       - CORS_ORIGIN=*
