--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start:back": "cd back && pnpm install && pnpm run build && pnpm run start",
     "start:front": "cd front && pnpm install && pnpm run build && pnpm run start",
-    "start": "concurrently \"pnpm run start:back\" \"pnpm run start:front\""
+    "start": "pnpm install && concurrently \"pnpm run start:back\" \"pnpm run start:front\""
   },
   "devDependencies": {
     "concurrently": "^9.2.1"
