--- a/back/package.json
+++ b/back/package.json
@@ -14,47 +14,47 @@
   "type": "module",
   "description": "",
   "dependencies": {
-    "express": "^4.18.2",
-    "@apollo/server": "^4",
-    "@typegoose/typegoose": "^12.19.0",
-    "apollo-server-express": "^3.13.0",
-    "body-parser": "^2.2.0",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.2",
-    "graphql": "^16.11.0",
-    "graphql-compose": "^9.1.0",
-    "graphql-compose-mongoose": "^10.0.0",
-    "mongoose": "^8.18.2",
-    "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1",
-    "uuid": "^13.0.0"
+    "express": "4.18.2",
+    "@apollo/server": "4",
+    "@typegoose/typegoose": "12.19.0",
+    "apollo-server-express": "3.13.0",
+    "body-parser": "2.2.0",
+    "cors": "2.8.5",
+    "dotenv": "17.2.2",
+    "graphql": "16.11.0",
+    "graphql-compose": "9.1.0",
+    "graphql-compose-mongoose": "10.0.0",
+    "mongoose": "8.18.2",
+    "reflect-metadata": "0.2.2",
+    "rxjs": "7.8.1",
+    "uuid": "13.0.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^9.18.0",
-    "@nestjs/cli": "^11.0.0",
-    "@types/body-parser": "^1.19.6",
-    "@types/cors": "^2.8.19",
+    "@eslint/eslintrc": "3.2.0",
+    "@eslint/js": "9.18.0",
+    "@nestjs/cli": "11.0.0",
+    "@types/body-parser": "1.19.6",
+    "@types/cors": "2.8.19",
     "@types/express": "4",
     "@types/express-serve-static-core": "4",
-    "@types/jest": "^30.0.0",
-    "@types/mongoose": "^5.11.96",
-    "@types/node": "^22.10.7",
-    "@types/supertest": "^6.0.2",
-    "eslint": "^9.18.0",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-prettier": "^5.2.2",
-    "globals": "^16.0.0",
-    "jest": "^30.0.0",
-    "prettier": "^3.4.2",
-    "source-map-support": "^0.5.21",
-    "supertest": "^7.0.0",
-    "ts-jest": "^29.2.5",
-    "ts-loader": "^9.5.2",
-    "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.20.0"
+    "@types/jest": "30.0.0",
+    "@types/mongoose": "5.11.96",
+    "@types/node": "22.10.7",
+    "@types/supertest": "6.0.2",
+    "eslint": "9.18.0",
+    "eslint-config-prettier": "10.0.1",
+    "eslint-plugin-prettier": "5.2.2",
+    "globals": "16.0.0",
+    "jest": "30.0.0",
+    "prettier": "3.4.2",
+    "source-map-support": "0.5.21",
+    "supertest": "7.0.0",
+    "ts-jest": "29.2.5",
+    "ts-loader": "9.5.2",
+    "ts-node": "10.9.2",
+    "tsconfig-paths": "4.2.0",
+    "typescript": "5.7.3",
+    "typescript-eslint": "8.20.0"
   },
   "overrides": {
     "@apollo/server": {
