--- a/front/package.json
+++ b/front/package.json
@@ -3,32 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "pnpm run codegen && next dev --turbopack",
+    "build": "pnpm run codegen && next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "codegen": "graphql-codegen"
   },
   "dependencies": {
-    "@ant-design/icons": "^6.0.2",
-    "@ant-design/nextjs-registry": "^1.1.0",
-    "antd": "^5.27.4",
-    "graphql": "^16.11.0",
-    "graphql-request": "^7.2.0",
+    "@ant-design/icons": "6.0.2",
+    "@ant-design/nextjs-registry": "1.1.0",
+    "@apollo/client": "3.14.0",
+    "@graphql-codegen/near-operation-file-preset": "3.1.0",
+    "antd": "5.27.4",
+    "graphql": "16.11.0",
+    "graphql-request": "7.2.0",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "sass": "^1.93.2",
-    "styled-jsx": "^5.1.7"
+    "sass": "1.93.2",
+    "styled-jsx": "5.1.7"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20.19.17",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
+    "@eslint/eslintrc": "3",
+    "@graphql-codegen/cli": "6.0.0",
+    "@graphql-codegen/typescript": "5.0.0",
+    "@graphql-codegen/typescript-operations": "5.0.0",
+    "@graphql-codegen/typescript-react-apollo": "4.3.3",
+    "@tailwindcss/postcss": "4",
+    "@types/node": "20.19.17",
+    "@types/react": "19",
+    "@types/react-dom": "19",
+    "eslint": "9",
     "eslint-config-next": "15.5.3",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "tailwindcss": "4",
+    "typescript": "5"
   }
 }
