--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "@apollo/client": "3.14.0",
     "@graphql-codegen/near-operation-file-preset": "3.1.0",
     "antd": "5.27.4",
+    "dotenv": "^17.2.2",
     "graphql": "16.11.0",
     "graphql-request": "7.2.0",
     "next": "15.5.3",
