added wait on to front

--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "scripts": {
     "start:back": "cd back && pnpm install && pnpm run build && pnpm run start",
-    "start:front": "cd front && pnpm install && pnpm run build && pnpm run start",
-    "start": "pnpm install && concurrently -k -n back,front -c green,blue \"pnpm run start:back\" \"wait-on http://localhost:3001/graphql && pnpm run start:front\""
+    "start:front": "cd front && pnpm install && dotenv -e .env.local -- wait-on $NEXT_PUBLIC_GRAPHQL_URL && pnpm run build && pnpm run start",
+    "start": "pnpm install && concurrently \"pnpm run start:back\" \"pnpm run start:front\""
   },
   "devDependencies": {
     "concurrently": "9.2.1",
-    "wait-on": "^9.0.1"
+    "dotenv-cli": "10.0.0",
+    "wait-on": "9.0.1"
   }
 }
