--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,7 @@ services:
   #   environment:
   #     - NODE_ENV=development
   #     - NEXT_PUBLIC_GRAPHQL_URL=${NEXT_PUBLIC_GRAPHQL_URL}
+  #     - NEXT_PUBLIC_GRAPHQL_BACK_PORT=${BACK_PORT}
   #   depends_on:
   #     - back
   #   restart: unless-stopped
