--- a/front/package.json
+++ b/front/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "pnpm run codegen && next dev",
-    "build": "pnpm run codegen && next build",
+    "dev": "dotenv -e .env.local -- sh -c 'wait-on tcp:$NEXT_PUBLIC_GRAPHQL_BACK_PORT && pnpm run codegen && next dev'",
+    "build": "dotenv -e .env.local -- sh -c 'wait-on tcp:$NEXT_PUBLIC_GRAPHQL_BACK_PORT && pnpm run codegen && next build'",
     "start": "next start",
     "lint": "eslint",
     "codegen": "graphql-codegen"
@@ -15,7 +15,7 @@
     "@apollo/client": "3.14.0",
     "@graphql-codegen/near-operation-file-preset": "3.1.0",
     "antd": "5.27.4",
-    "dotenv": "^17.2.2",
+    "dotenv": "17.2.2",
     "graphql": "16.11.0",
     "graphql-request": "7.2.0",
     "next": "15.5.3",
@@ -34,9 +34,11 @@
     "@types/node": "20.19.17",
     "@types/react": "19",
     "@types/react-dom": "19",
+    "dotenv-cli": "10.0.0",
     "eslint": "9",
     "eslint-config-next": "15.5.3",
     "tailwindcss": "4",
-    "typescript": "5"
+    "typescript": "5",
+    "wait-on": "9.0.1"
   }
 }
