--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 version: "3.8"
 
 services:
-  # MongoDB сервис
   mongodb:
     image: mongo:7.0
     container_name: mongo_db
@@ -41,21 +40,21 @@ services:
     networks:
       - app-network
 
-  # front:
-  #   build:
-  #     context: ./front
-  #     dockerfile: Dockerfile
-  #   ports:
-  #     - "${FRONT_PORT}:${FRONT_PORT}"
-  #   environment:
-  #     - NODE_ENV=development
-  #     - NEXT_PUBLIC_GRAPHQL_URL=${NEXT_PUBLIC_GRAPHQL_URL}
-  #     - NEXT_PUBLIC_GRAPHQL_BACK_PORT=${BACK_PORT}
-  #   depends_on:
-  #     - back
-  #   restart: unless-stopped
-  #   networks:
-  #     - app-network
+  front:
+    build:
+      context: ./front
+      dockerfile: Dockerfile
+    ports:
+      - "${FRONT_PORT}:${FRONT_PORT}"
+    environment:
+      - NODE_ENV=development
+      - NEXT_PUBLIC_GRAPHQL_URL=${NEXT_PUBLIC_GRAPHQL_URL}
+      - NEXT_PUBLIC_GRAPHQL_BACK_PORT=${BACK_PORT}
+    depends_on:
+      - back
+    restart: unless-stopped
+    networks:
+      - app-network
 
 volumes:
   mongodb_data:
