--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -4,15 +4,11 @@ WORKDIR /app
 
 RUN npm install -g pnpm
 
-COPY package*.json pnpm-lock.yaml* ./
+COPY package*.json ./
 
 RUN pnpm install
 
 COPY . .
-
-RUN apk add --no-cache curl
-RUN echo "Waiting for backend to be ready..." && \
-    curl -f http://back:3001/health || exit 1
 
 RUN pnpm run build
 
