--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,21 +40,21 @@ services:
     networks:
       - app-network
 
-  front:
-    build:
-      context: ./front
-      dockerfile: Dockerfile
-    ports:
-      - "${FRONT_PORT}:${FRONT_PORT}"
-    environment:
-      - NODE_ENV=development
-      - NEXT_PUBLIC_GRAPHQL_URL=${NEXT_PUBLIC_GRAPHQL_URL}
-      - NEXT_PUBLIC_GRAPHQL_BACK_PORT=${BACK_PORT}
-    depends_on:
-      - back
-    restart: unless-stopped
-    networks:
-      - app-network
+  # front:
+  #   build:
+  #     context: ./front
+  #     dockerfile: Dockerfile
+  #   ports:
+  #     - "${FRONT_PORT}:${FRONT_PORT}"
+  #   environment:
+  #     - NODE_ENV=development
+  #     - NEXT_PUBLIC_GRAPHQL_URL=${NEXT_PUBLIC_GRAPHQL_URL}
+  #     - NEXT_PUBLIC_GRAPHQL_BACK_PORT=${BACK_PORT}
+  #   depends_on:
+  #     - back
+  #   restart: unless-stopped
+  #   networks:
+  #     - app-network
 
 volumes:
   mongodb_data:
