--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,20 @@ services:
     restart: unless-stopped
     networks:
       - app-network
+    healthcheck:
+      test:
+        [
+          "CMD",
+          "wget",
+          "--no-verbose",
+          "--tries=1",
+          "--spider",
+          "http://localhost:${BACK_PORT}/health",
+        ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 20s
 
   front:
     build:
@@ -49,9 +63,10 @@ services:
     environment:
       - NODE_ENV=development
       - NEXT_PUBLIC_GRAPHQL_URL=${NEXT_PUBLIC_GRAPHQL_URL}
-      - NEXT_PUBLIC_GRAPHQL_BACK_PORT=${BACK_PORT}
+      - NEXT_PUBLIC_GRAPHQL_CHECK_URL=${NEXT_PUBLIC_GRAPHQL_CHECK_URL}
     depends_on:
-      - back
+      back:
+        condition: service_healthy
     restart: unless-stopped
     networks:
       - app-network
