--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -4,14 +4,12 @@ WORKDIR /app
 
 RUN npm install -g pnpm
 
-COPY package*.json ./
-
+COPY package.json pnpm-lock.yaml ./
 RUN pnpm install
 
 COPY . .
 
-RUN pnpm run build
-
 EXPOSE 3000
 
-CMD ["pnpm", "run", "start"]
+# CMD для dev
+CMD ["pnpm", "run", "dev"]
