--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       - GRAPHQL_PATH=${GRAPHQL_PATH}
       - PORT=${BACK_PORT}
       - MONGODB_URI=${MONGODB_URI}
+      - GRAPHQL_INTROSPECTION=${GRAPHQL_INTROSPECTION}
       - CORS_ORIGIN=*
       - CORS_CREDENTIALS=true
     extra_hosts:
