--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,15 +42,7 @@ services:
     networks:
       - app-network
     healthcheck:
-      test:
-        [
-          "CMD",
-          "wget",
-          "--no-verbose",
-          "--tries=1",
-          "--spider",
-          "http://localhost:${BACK_PORT}/health",
-        ]
+      test: ["CMD", "curl", "-f", "http://localhost:${BACK_PORT}/health"]
       interval: 10s
       timeout: 5s
       retries: 5
